k8s/deployment.yaml
apiVersion: apps/v1
#Test
kind: Deployment
metadata:
  name: underwater-app-github
  labels:
    app: octopus-underwater-app
  namespace: octopus
  annotations:
    external-dns.alpha.kubernetes.io/hostname: octopus.goevrgrn.com
spec:
  selector:
    matchLabels:
        app: octopus-underwater-app
  replicas: 3
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: octopus-underwater-app
    spec:
      containers:
        - name: octopus-underwater-app
          image: amazonaws.com/kubernetes-github-actions
          ports:
            - containerPort: 80
              protocol: TCP
          imagePullPolicy: Always
