k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: website
    namespace: octopus
    labels:
        app: octopus-underwater-app
spec:
    type: LoadBalancer
    selector:
        app: octopus-underwater-app
    ports:
    - port: 80
      protocol: TCP  
      targetPort: 3000
