k8s/ingress.yaml
apiVersion: networking.k8s.io/v1 #TEST
kind: Ingress
metadata:
  name: test-ingress
  namespace: octopus
  cert-manager.io/cluster-issuer: letsencrypt-staging
  acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
  - hosts: 
      -octopus.evrgrncloud.com 
    secretName: octopus-tls
  ingressClassName: nginx
  rules:
  - host: "octopus.evrgrncloud.com"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: website
              port:
                number: 80
